--- a/css/login.css
+++ b/css/login.css
@@ -5,6 +5,12 @@ body {
   background-color: #D8D8D8;
 }
 
+.form-head {
+  font-family: "Brush Script MT", cursive;
+  font-weight: bold;
+  font-size: 40px;
+}
+
 .signup-form {
   max-width: 360px;
   padding: 25px;
@@ -29,6 +35,7 @@ body {
 
 .signup-form input[type="submit"] {
  background: #0000FF;
+ font-family: "Brush Script MT", cursive;
  color: white;
  font-weight: bold;
  font-size: 20px;
