--- a/css/login.css
+++ b/css/login.css
@@ -5,6 +5,18 @@ body {
   background-color: #D8D8D8;
 }
 
+.page-head {
+  background-color: #1C1C1C;
+  font-family: "Brush Script MT", cursive;
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
+  margin-top: -40px;
+  text-align: center;
+  height: auto;
+  width: 100%;
+}
+
 .form-head {
   font-family: "Brush Script MT", cursive;
   font-weight: bold;
