--- a/css/login.css
+++ b/css/login.css
@@ -21,6 +21,7 @@ body {
   font-family: "Brush Script MT", cursive;
   font-weight: bold;
   font-size: 40px;
+  text-align: center;
 }
 
 .signup-form {
